--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desing page</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
    <div class="maincontainer">
-    
+    <div class="first-para">
+    <div class="first">
+        <div class="header">
+            <div class="header-first">
+                <img class="first-image" src="/images/navbar.png" alt="">
+
+                </div>
+                <div class="second-image">
+                    <img src="/images/Language choice control.png" alt="">
+                </div>
+                <div class="third-header">
+                    <h1>About us</h1>
+                    <h2>How it works</h2>
+                    <h3>Services</h3>
+                    <h4>Contact</h4>
+                </div>
+                <div class="button">
+                    <h3>Join us</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
    </div>
 </body>
 </html>
