first section end

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
    <div class="maincontainer">
     <div class="first-para">
+        <img class="third-image" src="/images/Group.png" alt="">
+        
     <div class="first">
         <div class="header">
+            <div class="first-another-div">
             <div class="header-first">
                 <img class="first-image" src="/images/navbar.png" alt="">
 
@@ -24,14 +27,49 @@
                     <h3>Services</h3>
                     <h4>Contact</h4>
                 </div>
+            </div>
                 <div class="button">
                     <h3>Join us</h3>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="second-section">
+            <div class="second-sec-first">
+                <h1>Easy <span>Design</span></h1>
+                <h2><span>Easy</span> Website</h2>
+                <p>Welcome to Our Agency's Professional and User-Friendly Website!</p>
+            </div>
+            <div class="second-button">
+                <h2>Try it now</h2>
+            </div>
+        </div>
+        <img class="forth-image" src="/images/Ellipse 2.png" alt="">
+        <div id="section-second">
+            <div class="inner-section">
+                <div id="inner-first">
+                    <img src="/images/money.png" alt="">
+                    <div class="second-inner">
+                        <div class="third-inner">
+                            <h4>Competitive price</h4>
+                            <hr>
+                        </div>
+                        <h5>We consider your company's budget <br>and stay within the defined limits</h5>
+                    </div>
+                </div>
+          
+                <div class="forth-inner">
+                    <img src="/images/rocket.png" alt="">
+                    <div id="fifth-inner">
+<div class="sixth-inner">
+    <h4>Fast deadlines</h4>
+    <hr>
 </div>
-
+<h6>Our extensive experience in this field enables us to deliver projects , seamlessly and on time</h6>
+                    </div>
+                </div>
+            </div> 
+        </div>
+        </div>
    </div>
 </body>
 </html>
