three section complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <div class="first-another-div">
             <div class="header-first">
                 <img class="first-image" src="/images/navbar.png" alt="">
-
                 </div>
                 <div class="second-image">
                     <img src="/images/Language choice control.png" alt="">
@@ -44,32 +43,96 @@
             </div>
         </div>
         <img class="forth-image" src="/images/Ellipse 2.png" alt="">
-        <div id="section-second">
-            <div class="inner-section">
-                <div id="inner-first">
-                    <img src="/images/money.png" alt="">
-                    <div class="second-inner">
-                        <div class="third-inner">
-                            <h4>Competitive price</h4>
-                            <hr>
-                        </div>
-                        <h5>We consider your company's budget <br>and stay within the defined limits</h5>
+    </div>
+    <div class="second-main-container">
+    <div class="box">
+    <div id="section-second">
+        <div class="inner-section">
+            <div id="inner-first">
+                <img src="/images/money.png" alt="">
+                <div class="second-inner">
+                    <div class="third-inner">
+                        <h4>Competitive price</h4>
+                        <hr>
                     </div>
+                    <h5>We consider your company's budget <br>and stay within the defined limits</h5>
                 </div>
-          
-                <div class="forth-inner">
-                    <img src="/images/rocket.png" alt="">
-                    <div id="fifth-inner">
+            </div>
+      
+            <div class="forth-inner">
+                <img src="/images/rocket.png" alt="">
+                <div id="fifth-inner">
 <div class="sixth-inner">
-    <h4>Fast deadlines</h4>
-    <hr>
+<h4>Fast deadlines</h4>
+<hr>
 </div>
-<h6>Our extensive experience in this field enables us to deliver projects , seamlessly and on time</h6>
-                    </div>
+<h6>Our extensive experience in this field enables us to deliver projects seamlessly and on time</h6>
                 </div>
-            </div> 
+            </div>
+            <div id="inner-seven">
+                <img class="fifth-image" src="/images/stars_icon.png" alt="">
+                <div class="seven-inner">
+                    <div class="inner-eight">
+<h3>Unique working methods</h3>
+<hr>
+                    </div>
+                    <h6>We do not use a one-size-fits-all <br> template for our clients. Instead, we adopta customized approach for each company</h6>
+                </div>
+            </div>
+        </div> 
+    </div>  
+</div>
+<div class="containt-image">
+    <div class="purple">
+
+        <img src="/images/Ellipse 1.png" alt="">
+    </div>
+    <div class="about">
+        <img src="/images/about-us-img-and-header.png" alt="">
+    </div>
+    <div class="second-con">
+        <h6>Since 2017, we have evolved from a small company to a full-fledged agency. Our experience has allowed us to master the intricacies oftechnological processes, and we are now experts in production. We strive to provide the most comfortable experience for our clients</h6>
+            <div class="second-box-last">
+                <div class="inner-second-box">
+                    <h2>100+</h2>
+                    <h3>Projects</h3>
+                </div>
+                <div class="inner-third-box">
+<h4>6 years</h4>
+<h5>of experience</h5>
+                </div>
+                <div class="inner-third-forth">
+                    <h5>50</h5>
+                    <h6>regular  customers</h6>
+                </div>
+            </div>
         </div>
-        </div>
-   </div>
+</div>
+<div class="last-heading">
+    <div class="heading-first">
+        <h5>How <span>it</span><br>works</h5>
+    </div>
+    <div class="new-child">
+    <h3>To ensure your convenience, we have broken down
+        the workflow into clear and comprehensible steps</h3>
+    </div>
+</div>
+<div class="parent">
+<div class="first-child">
+    <img class="first-circle" src="/images/Group 386.png" alt="" style="width: 80px;">
+    <div class="second-child">
+        <div class="third-child">
+<h3>You describe
+    your needs</h3>
+<h5>At our agency, we believe that every successful project begins with a clear understanding
+    of our clients needs. This is why we encourage you to describe your needs in detail</h5>        
+</div>
+
+    </div>
+</div>
+</div>
+
+</div>  
+</div>
 </body>
 </html>
