three section complete

--- a/index.html
+++ b/index.html
@@ -119,12 +119,15 @@
 </div>
 <div class="parent">
 <div class="first-child">
+    <div class="first-one">
+        <h2>01</h2>
+    </div>
     <img class="first-circle" src="/images/Group 386.png" alt="" style="width: 80px;">
     <div class="second-child">
         <div class="third-child">
 <h3>You describe
     your needs</h3>
-<h5>At our agency, we believe that every successful project begins with a clear understanding
+<h5>At our agency,  we believe that every successful project begins with a clear understanding <br>
     of our clients needs. This is why we encourage you to describe your needs in detail</h5>        
 </div>
 
