section forth start

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 </div>
 <div class="containt-image">
     <div class="purple">
-
         <img src="/images/Ellipse 1.png" alt="">
     </div>
     <div class="about">
@@ -118,21 +117,66 @@
     </div>
 </div>
 <div class="parent">
-<div class="first-child">
-    <div class="first-one">
-        <h2>01</h2>
+    <div class="last-child">
+        <div class="last-child">
+            <div class="one">
+             <h6>01</h6>
+            </div>
+            <img class="party" src="/images/Group 386.png" alt="" style="width: 80px;">
+            <div class="last-child-first">
+                <div class="first-child-new">
+                <h3>You describe!<br>your needs</h3>
+                <h4>At our agency, we believe  that every successful project begins with a clear understanding  of our clients needs. This is why we encourage you to describe your needs in detail</h4>
+                </div>
+                </div>
+        </div>
     </div>
-    <img class="first-circle" src="/images/Group 386.png" alt="" style="width: 80px;">
-    <div class="second-child">
-        <div class="third-child">
-<h3>You describe
-    your needs</h3>
-<h5>At our agency,  we believe that every successful project begins with a clear understanding <br>
-    of our clients needs. This is why we encourage you to describe your needs in detail</h5>        
+<div class="forth-child">
+<div class="forth-two">
+    <h3>02</h3>
 </div>
-
+    <img class="tower" src="/images/second.png" alt="" style="max-width: 80px;" >
+    <div class="forth-first">
+<div class="forth-second">
+    <h3>We create <br>a solution for you</h3>
+        <h4>Not only do we provide high-quality solutions, but we also offer <span>the best prices</span> in the market! If you come across a better price than ours, we will match it and  <span class="second-span">reduce it by an additional 20%</span> </h4>
+</div>
+<div class="forth-third">
+    <div class="forth-forth">
+        <div class="fifth-first">
+        </div>
+        <h5>Try it now</h5>
+    </div>
+    <img class="arrow" src="/images/right_icon.png" alt="" style="width:41px; height: 29px;">
+</div>
     </div>
 </div>
+<div class="last-child">
+    <div class="last-child">
+        <div class="three">
+         <h6>03</h6>
+        </div>
+        <img class="party" src="/images/party.png" alt="" style="width: 80px;">
+        <div class="last-child-first">
+            <div class="last-child-new">
+            <h3>Your site is ready!<br>We are happy</h3>
+            <h4>We guarantee on-time delivery
+                of your project and take into consideration all your requested changes and preferences. Our team is always ready to provide assistance and support whenever you need it</h4>
+            </div>
+            </div>
+    </div>
+</div>
+</div>
+<div class="forth-container">
+    <img class="circle" src="/images/animated-bg.png" alt="" style="max-height: 750px;">
+    <div class="circle-second">
+        <h1>Our agency services</h1>
+        <h2>What <span>services</span><br>can we provide <br>you with?</h2>
+    </div>
+    <div class="circle-third">
+        <img src="/images/first plus.png" alt="" style="width: 35px;">
+    <h3>We will design a website that is visually appealing, easy to navigate,<br> and reflects the brand of the business</h3>
+    </div>
 </div>
 
 </div>  
