one section remain

--- a/index.html
+++ b/index.html
@@ -177,8 +177,77 @@
         <img src="/images/first plus.png" alt="" style="width: 35px;">
     <h3>We will design a website that is visually appealing, easy to navigate,<br> and reflects the brand of the business</h3>
     </div>
+    <!--  -->
+    <div class="circle-forth">
+        <img id="second-circle" src="/images/first plus.png" alt="" style="width: 35px;">
+    <h4>We will develop the website, ensuring that it is functional and user-friendly</h4>
+    </div>
+    <!--  -->
+    <div class="circle-fifth">
+        <img id="third-circle" src="/images/first plus.png" alt="" style="width: 35px;">
+    <h5>We  will optimize the website for search engines, making it more likely to appear<br> in search results when people search for relevant keywords</h5>
+    </div>
+    <!--  -->
+    <div class="circle-sixth">
+        <img id="forth-circle" src="/images/first plus.png" alt="" style="width: 35px;">
+    <h6>We  will provide ongoing maintenance and support services to ensure that the website remains up-to-date and secure</h6>
+    </div>
+    <div id="last-forth">
+        <h2>Special <span>offers</span><br>of our agency</h2>
+    </div>
+</div>
+<div class="fifth-container">
+<div class="container-para">
+<div class="box-pink">
+    <div class="for-images">
+        <img src="/images/best-price-icon 1.png" alt="" style="width: 61px;">
+        <h3>01</h3>
+    </div>
+    <div id="best">
+        <h2>Best price</h2>
+        <hr>
+        <h3>We offer the best price on the market. At the same time, we guarantee the quality of the work.</h3>
+    </div>
+</div>
+<!--  -->
+<div class="box-black">
+    <div class="for-line">
+        <hr>
+    </div>
+    <div class="for-images">
+        <img src="/images/Слой 2.png" alt="" style="width: 61px;">
+        <h4>02</h4>
+    </div>
+    <div id="best">
+        <h2>Less than minimum</h2>
+        <hr>
+        <h3>If you come across a better price than ours, we will match  it and reduce it by an additional 20%</h3>
+    </div>
+</div>
+<!--  -->
+<div id="black-last">
+    <div class="two-box"></div>
+    <div class="box-black-white">
+        <div class="for-line">
+            <hr>
+        </div>
+        <div class="for-images">
+            <img src="/images/trust-icon.png" alt="" style="width: 61px;">
+            <h4>03</h4>
+        </div>
+        <div id="best">
+            <h2>Satisfy or refund</h2>
+            <hr>
+            <h3>Our commitment to providing top-notch services is so strong that we offer a "satisfaction or your money back" policy </h3>
+        </div>
+    </div>
+
 </div>
 
+</div>
+</div>
+<div id="sixth-container">
+    
 </div>  
 </div>
 </body>
