ui complete without responsive

--- a/index.html
+++ b/index.html
@@ -247,8 +247,61 @@
 </div>
 </div>
 <div id="sixth-container">
-    
+    <div id="sixth-container-box">
+        <div id="box-container-one">
+<h3>Contact us<span>.</span></h3>
+<h4>Please provide your contact information and we will get in touch with you as soon as possiblez</h4>
+        </div>
+        <div id="box-fifth-last">
+            <div class="for-names">
+                <h3>Book Strategy Call</h3>
+               <input type="text" name="Name" placeholder="Name" style="margin-bottom: 20px;">
+               <input type="email" name="email" placeholder="Email" style="margin-bottom: 20px;">
+               <input type="number" name="Phone" placeholder="Phone" style="margin-bottom: 20px;">
+               <div class="for-two-childs">
+                   <input type="datetime"  placeholder="Select a date" style="margin-bottom: 20px;">
+                   <input type="datetime"  placeholder="Pick a time" >
+                </div>
+                   <div class="check-box">
+<input type="checkbox" style="width: 16px; height: 16px ;margin: 0;">
+<div class="for-check-number">
+    <h6>Please confirm that you have read our <span>Privacy Policy <hr>  </span></h6>
+</div>
+
+                </div>
+                <div class="seven-button">
+                    <h4>Send enquiry</h4>
+                </div>
+               </div>
+        </div>
+    </div>
 </div>  
+    <footer>
+<div class="foter-first">
+    <div id="first-first">
+        <img src="/images/navbar.png" alt="" style="width: 160px;height: 46px;">
+        <div class="about">
+            <h1>About us</h1>
+            <h2>How it works</h2>
+            <h1>Services</h1>
+            <h1>Contact</h1>
+        </div>
+    </div>
+   <div class="second-info">
+    <h1>+1 (478) 123 1234</h1>
+    <h2>info@clearvision.io</h2>
+    <h3>Denison Street, Unit 21, Markham</h3>
+   </div>
+   <hr>
+   <div class="last-footer">
+    <h2>@ClearVisionAnalytics. All rights reserved.</h2>
+    <div class="end-footer">
+        <h1>Privacy Policy</h1>
+        <h2>Cookie Policy</h2>
+    </div>
+   </div>
+</div>
+    </footer>
 </div>
 </body>
 </html>
