resopnsive  on screen

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="second-main-container">
     <div class="box">
-    <div id="section-second">
+     <div id="section-second">
         <div class="inner-section">
             <div id="inner-first">
                 <img src="/images/money.png" alt="">
@@ -55,12 +55,12 @@
                         <h4>Competitive price</h4>
                         <hr>
                     </div>
-                    <h5>We consider your company's budget <br>and stay within the defined limits</h5>
+                    <h5>We consider your company's budgetand stay within the defined limits</h5>
                 </div>
             </div>
       
             <div class="forth-inner">
-                <img src="/images/rocket.png" alt="">
+                <img src="/images/rocket_icon.png" alt="">
                 <div id="fifth-inner">
 <div class="sixth-inner">
 <h4>Fast deadlines</h4>
@@ -73,24 +73,25 @@
                 <img class="fifth-image" src="/images/stars_icon.png" alt="">
                 <div class="seven-inner">
                     <div class="inner-eight">
-<h3>Unique working methods</h3>
+<h3>Unique working <br>methods</h3>
 <hr>
                     </div>
-                    <h6>We do not use a one-size-fits-all <br> template for our clients. Instead, we adopta customized approach for each company</h6>
+                    <h6>We do not use a one-size-fits-all<br>template for our clients. Instead, we adopta customized approach for each company</h6>
                 </div>
             </div>
         </div> 
-    </div>  
+    </div>   -
 </div>
 <div class="containt-image">
     <div class="purple">
         <img src="/images/Ellipse 1.png" alt="">
     </div>
-    <div class="about">
-        <img src="/images/about-us-img-and-header.png" alt="">
+    <div class="good">
+        <img  src="/images/about-us-img-and-header.png" alt="">
     </div>
     <div class="second-con">
-        <h6>Since 2017, we have evolved from a small company to a full-fledged agency. Our experience has allowed us to master the intricacies oftechnological processes, and we are now experts in production. We strive to provide the most comfortable experience for our clients</h6>
+        <h6>Since 2017, we have evolved from a small<br>
+             company to a full-fledged agency. Our experience has allowed us to master the intricacies oftechnological processes, and we are now experts in production. We strive to provide the most comfortable experience for our clients</h6>
             <div class="second-box-last">
                 <div class="inner-second-box">
                     <h2>100+</h2>
@@ -117,6 +118,7 @@
     </div>
 </div>
 <div class="parent">
+<div class="parent-parent">
     <div class="last-child">
         <div class="last-child">
             <div class="one">
@@ -166,6 +168,8 @@
             </div>
     </div>
 </div>
+</div>
+
 </div>
 <div class="forth-container">
     <img class="circle" src="/images/animated-bg.png" alt="" style="max-height: 750px;">
