remain for mobile screen

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
     <div class="good">
         <img  src="/images/about-us-img-and-header.png" alt="">
     </div>
+    <div class="new">
+        <img class="second-good" src="/images/second-copy.png" alt="">
+    </div>
     <div class="second-con">
         <h6>Since 2017, we have evolved from a small<br>
              company to a full-fledged agency. Our experience has allowed us to master the intricacies oftechnological processes, and we are now experts in production. We strive to provide the most comfortable experience for our clients</h6>
@@ -280,7 +283,7 @@
         </div>
     </div>
 </div>  
-    <footer>
+    <!-- <footer>
 <div class="foter-first">
     <div id="first-first">
         <img src="/images/navbar.png" alt="" style="width: 160px;height: 46px;">
@@ -305,7 +308,7 @@
     </div>
    </div>
 </div>
-    </footer>
+    </footer> -->
 </div>
 </body>
 </html>
