--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="second-main-container">
     <div class="box">
-     <div id="section-second">
+     <!-- <div id="section-second">
         <div class="inner-section">
             <div id="inner-first">
                 <img src="/images/money.png" alt="">
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div> 
-    </div>   -
+    </div>    -->
 </div>
 <div class="containt-image">
     <div class="purple">
@@ -260,6 +260,9 @@
 <h4>Please provide your contact information and we will get in touch with you as soon as possiblez</h4>
         </div>
         <div id="box-fifth-last">
+            <div class="for-second-last-section">
+                <hr>
+            </div>
             <div class="for-names">
                 <h3>Book Strategy Call</h3>
                <input type="text" name="Name" placeholder="Name" style="margin-bottom: 20px;">
@@ -283,7 +286,10 @@
         </div>
     </div>
 </div>  
-    <!-- <footer>
+</div>
+</div>
+</div>
+    <footer>
 <div class="foter-first">
     <div id="first-first">
         <img src="/images/navbar.png" alt="" style="width: 160px;height: 46px;">
@@ -308,7 +314,7 @@
     </div>
    </div>
 </div>
-    </footer> -->
-</div>
+    </footer>
+
 </body>
 </html>
