--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="second-main-container">
     <div class="box">
-     <!-- <div id="section-second">
+    <div id="section-second">
         <div class="inner-section">
             <div id="inner-first">
                 <img src="/images/money.png" alt="">
@@ -55,7 +55,7 @@
                         <h4>Competitive price</h4>
                         <hr>
                     </div>
-                    <h5>We consider your company's budgetand stay within the defined limits</h5>
+                    <h5>We consider your company's budget and stay within the defined limits</h5>
                 </div>
             </div>
       
@@ -63,7 +63,7 @@
                 <img src="/images/rocket_icon.png" alt="">
                 <div id="fifth-inner">
 <div class="sixth-inner">
-<h4>Fast deadlines</h4>
+<h4>Fast <br> deadlines</h4>
 <hr>
 </div>
 <h6>Our extensive experience in this field enables us to deliver projects seamlessly and on time</h6>
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div> 
-    </div>    -->
+    </div>    
 </div>
 <div class="containt-image">
     <div class="purple">
