--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 </div>
 </div>
-<div id="sixth-container">
+<!-- <div id="sixth-container">
     <div id="sixth-container-box">
         <div id="box-container-one">
 <h3>Contact us<span>.</span></h3>
@@ -268,16 +268,16 @@
                <input type="text" name="Name" placeholder="Name" style="margin-bottom: 20px;">
                <input type="email" name="email" placeholder="Email" style="margin-bottom: 20px;">
                <input type="number" name="Phone" placeholder="Phone" style="margin-bottom: 20px;">
+               <div class="select-d"></div>
                <div class="for-two-childs">
                    <input type="datetime"  placeholder="Select a date" style="margin-bottom: 20px;">
                    <input type="datetime"  placeholder="Pick a time" >
                 </div>
                    <div class="check-box">
-<input type="checkbox" style="width: 16px; height: 16px ;margin: 0;">
+<input  type="checkbox" style="width: 16px; height: 16px ;margin: 0;">
 <div class="for-check-number">
     <h6>Please confirm that you have read our <span>Privacy Policy <hr>  </span></h6>
 </div>
-
                 </div>
                 <div class="seven-button">
                     <h4>Send enquiry</h4>
@@ -288,7 +288,7 @@
 </div>  
 </div>
 </div>
-</div>
+</div> -->
     <footer>
 <div class="foter-first">
     <div id="first-first">
