--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 </div>
 </div>
-<!-- <div id="sixth-container">
+<div id="sixth-container">
     <div id="sixth-container-box">
         <div id="box-container-one">
 <h3>Contact us<span>.</span></h3>
@@ -267,12 +267,12 @@
                 <h3>Book Strategy Call</h3>
                <input type="text" name="Name" placeholder="Name" style="margin-bottom: 20px;">
                <input type="email" name="email" placeholder="Email" style="margin-bottom: 20px;">
-               <input type="number" name="Phone" placeholder="Phone" style="margin-bottom: 20px;">
-               <div class="select-d"></div>
+               <input type="number" name="Phone" placeholder="Phone" style="margin-bottom: 20px;">          
                <div class="for-two-childs">
-                   <input type="datetime"  placeholder="Select a date" style="margin-bottom: 20px;">
-                   <input type="datetime"  placeholder="Pick a time" >
+                   <input type="email"  placeholder="Select a date" style="margin-bottom: 20px;">
+                   <img src="/images/calender.png" alt="">
                 </div>
+                   <!-- <input type="datetime"  placeholder="Pick a time" > -->
                    <div class="check-box">
 <input  type="checkbox" style="width: 16px; height: 16px ;margin: 0;">
 <div class="for-check-number">
@@ -288,7 +288,7 @@
 </div>  
 </div>
 </div>
-</div> -->
+</div> 
     <footer>
 <div class="foter-first">
     <div id="first-first">
