--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <div class="header-first">
                 <img class="first-image" src="/images/navbar.png" alt="">
                 </div>
+            </div>
                 <div class="second-image">
                     <img src="/images/Language choice control.png" alt="">
-                </div>
+                
                 <div class="third-header">
                     <h1>About us</h1>
                     <h2>How it works</h2>
@@ -268,14 +269,27 @@
                <input type="text" name="Name" placeholder="Name" style="margin-bottom: 20px;">
                <input type="email" name="email" placeholder="Email" style="margin-bottom: 20px;">
                <input type="number" name="Phone" placeholder="Phone" style="margin-bottom: 20px;">          
+               <div class="new-for-input">
                <div class="for-two-childs">
                    <input type="email"  placeholder="Select a date" style="margin-bottom: 20px;">
-                   <img src="/images/calender.png" alt="">
+                   <img src="/images/calender.png" alt="" style="    width: 18px;
+                   position: absolute;
+                   right: 26px;
+                   top: 19px;
+                   cursor: pointer;">
                 </div>
-                   <!-- <input type="datetime"  placeholder="Pick a time" > -->
+                <div class="for-time" style="width: auto; position: relative;
+                height: fit-content; cursor: pointer;">
+                    <input type="datetime"  placeholder="Pick a time" >
+                    <img src="/images/time-icon 1.png" alt="" style="position: absolute;width: 20px; right: 24px;
+                top: 14px" >
+                </div>
+            </div>
+
                    <div class="check-box">
-<input  type="checkbox" style="width: 16px; height: 16px ;margin: 0;">
+<input  type="checkbox" style="width: 16px; height: 16px ;margin: 0; cursor: pointer;">
 <div class="for-check-number">
+
     <h6>Please confirm that you have read our <span>Privacy Policy <hr>  </span></h6>
 </div>
                 </div>
