--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                 <div class="button">
                     <h3>Join us</h3>
                 </div>
+                <div class="hamburger">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="37" height="100" viewBox="0 0 32 32"
+                    style="fill:#FFFFFF;">
+                    <path d="M 4 7 L 4 9 L 28 9 L 28 7 Z M 4 15 L 4 17 L 28 17 L 28 15 Z M 4 23 L 4 25 L 28 25 L 28 23 Z"></path>
+                    </svg>
+                    </svg>
+                </div>
+                    
             </div>
         </div>
         <div class="second-section">
