--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                    top: 19px;
                    cursor: pointer;">
                 </div>
-                <div class="for-time" style="width: auto; position: relative;
+                <div class="for-time" style="width: -webkit-fill-available; position: relative;
                 height: fit-content; cursor: pointer;">
                     <input type="datetime"  placeholder="Pick a time" >
                     <img src="/images/time-icon 1.png" alt="" style="position: absolute;width: 20px; right: 24px;
